fix: cards horizontal alignment

--- a/christmas-shop/style/gifts/all-gifts.scss
+++ b/christmas-shop/style/gifts/all-gifts.scss
@@ -1,9 +1,18 @@
+@use '../common/screens.scss' as screen;
+
 .all-gifts {
+  display: flex;
+  flex-direction: column;
   padding: 60px 82px;
   background: var(--color-red) url(assets/gifts/all-gifts/bg-garland.png) top center / contain no-repeat;
   border-radius: 20px;
   text-align: center;
   color: var(--color-white);
+
+  @media (max-width: screen.$md) {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 
   &__header.h1 {
     width: 430px;
