--- a/christmas-shop/style/home/best-gifts.scss
+++ b/christmas-shop/style/home/best-gifts.scss
@@ -15,4 +15,9 @@
     margin-top: 13px;
     margin-bottom: 20px;
   }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
 }
